@@ -37,4 +37,9 @@ ${EZBIN}/ezmlm-manage "$DIR" </dev/null >"$ERR" 2>&1 || \
 	fatal "ezmlm-manage failed"
 checkenv decode-prvs4 "$LOC-return-@$HOST" "xyzzy@host"
 
+SENDER="btv1==714c5c5acad==xyzzy@host"
+${EZBIN}/ezmlm-manage "$DIR" </dev/null >"$ERR" 2>&1 || \
+	fatal "ezmlm-manage failed"
+checkenv decode-btv1 "$LOC-return-@$HOST" "xyzzy@host"
+
 ${ECHO} "OK"
